# gimp-mcp

./: .gitignore  .mcp.json  GIMP_MCP_SETUP.md  LICENSE  PR_DESCRIPTION.md  README.md  _gimp_err.txt  pyproject.toml
.grok-plugin/: plugin.json
.grok/skills/gimp-mcp/: SKILL.md
.grok/skills/gimp-mcp/references/: tools-reference.md
.grok/skills/gimp-mcp/scripts/: doctor.ps1
docs/: BOUNTY.md  GALLERY.md  GIMP_BATCH_FLAGS.md  GIMP_VERSIONS.md
examples/: claude_desktop_config.json
scripts/: logo_batch_all.ps1  logo_build.ps1  logo_flat_helvet.ps1  logo_list_fonts.ps1  logo_styles.ps1  logo_variants.py
skills/gimp-mcp/: SKILL.md
skills/gimp-mcp/references/: workflows.md
src/gimp_mcp/: __init__.py  __main__.py  bridge.py  cli.py  config.py  ops.py  server.py
src/gimp_mcp/backend/: __init__.py  base.py  bridge.py  live.py  mock.py
src/gimp_mcp/layers_tools/: __init__.py
tests/: test_bridge.py  test_cli_demo.py  test_mock_backend.py  test_ops_pipeline.py  test_png_roundtrip.py  test_server_tools.py
