[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gimp-mcp"
version = "0.3.0"
description = "MCP server for GIMP image ops (mock + live gimp-console batch)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
dependencies = [
  "mcp>=1.2",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pillow>=10.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
gimp-mcp = "gimp_mcp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
